<resources>
    <string name="app_name">ChatHub</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="sign_in">Sign In</string>
    <string name="preferences_menu_label">Preferences</string>
    <string name="auto_palette_preference">autoPalette</string>
    <string name="color_scheme_preference">colorScheme</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="voice">Voice</string>
    <string name="sticker">Sticker</string>
    <string name="drawing">Draw</string>
</resources>
