<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7f7f7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/shareImageButton"
                    android:src="@drawable/ic_image_black_24dp"
                    android:background="@drawable/button_ripple"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#888"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/image"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/cameraButton"
                    android:src="@drawable/ic_photo_camera_black_24dp"
                    android:background="@drawable/button_ripple"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#888"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/camera"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/locationButton"
                    android:src="@drawable/ic_my_location_black_24dp"
                    android:background="@drawable/button_ripple"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#888"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/location"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/voiceButton"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:background="@drawable/button_ripple"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#888"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/voice"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/stickerButton"
                    android:src="@drawable/ic_mood_black_24dp"
                    android:background="@drawable/button_ripple"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#888"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/sticker"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/drawButton"
                    android:src="@drawable/ic_gesture_black_24dp"
                    android:background="@drawable/button_ripple"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="#888"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/drawing"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>